# IPMIDeck

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  RELEASING.md  config.example.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  gate.yml  release.yml
backend/: console.py  main.py
backend/api/: auth_routes.py  dashboard_routes.py  module_routes.py  server_routes.py  system_routes.py
backend/core/: auth.py  branding.py  certs.py  config.py  crypto.py  database.py  events.py  i18n.py  ipmi_demo.py  ipmi_service.py  logging_util.py  modules.py  websocket.py
backend/modules/: __init__.py
backend/modules/fanpilot/: engine.py  manifest.py  routes.py  tasks.py
backend/modules/fanpilot/migrations/: 001_initial.sql
backend/modules/fru/: manifest.py  routes.py
backend/modules/fru/migrations/: 001_initial.sql
backend/modules/power/: manifest.py  routes.py  tasks.py
backend/modules/power/migrations/: 001_initial.sql
backend/modules/sel/: manifest.py  routes.py  tasks.py
backend/modules/sel/migrations/: 001_initial.sql
backend/modules/sensors/: manifest.py  routes.py  tasks.py
backend/modules/sensors/migrations/: 001_initial.sql
backend/static/: index.html
backend/static/assets/: Dashboard-1IUF-P9l.js  Dashboard-B5ZEfqut.js  Dashboard-B5wg0D0o.js  Dashboard-B8jvMPcY.js  Dashboard-B8osvzkb.js  Dashboard-BCm_4r7-.js  Dashboard-BIzIDnvT.js  Dashboard-BMYlerPm.js  Dashboard-BNWDh693.js  Dashboard-BPmOADgx.js  Dashboard-Bj9eBREo.js  Dashboard-BmFGStk5.js  Dashboard-BtJ8u-Vn.js  Dashboard-Bu2Dipr9.js  Dashboard-BvQXXu0Q.js  Dashboard-BxDDRpWE.js  Dashboard-Bz-MQlwX.js  Dashboard-C1Nwgqcv.js  Dashboard-C7j2vABb.js  Dashboard-CDsJ7FSc.js  Dashboard-CFE5vgae.js  Dashboard-CFcuvL4E.js  Dashboard-CIs-LG1Y.js  Dashboard-CPBoqSlA.js  Dashboard-CQFNqRWW.js  Dashboard-CTNo7iHd.js  Dashboard-CZhRKKlr.js  Dashboard-CdZg_KFj.js  Dashboard-Cr2F1Gvj.js  Dashboard-CrBMv2MC.js  Dashboard-CvQKSIAb.js  Dashboard-Cw-DgJEP.js  Dashboard-Cy65xROb.js  Dashboard-D7mcK8Be.js  Dashboard-DAZd99p_.js  Dashboard-DBg8PXbX.js  Dashboard-DK1NxI1P.js  Dashboard-DMeasSzF.js  Dashboard-DMm61VQJ.js  Dashboard-DOqg2yf_.js  (+841 more)
docs/: README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: settings-deeplink.test.tsx  settings-routing.test.tsx  settings-tour-reachability.test.tsx  settings-traversal.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: CommandPalette.tsx  ConnectionBanner.tsx  DemoBanner.tsx  ErrorBoundary.tsx  LanguageSelect.test.tsx  LanguageSelect.tsx  OnboardingTour.tsx  ShortcutsHelp.tsx
frontend/src/components/common/: Card.tsx  EmptyState.tsx
frontend/src/components/dashboard/: WidgetCatalog.tsx  WidgetGrid.tsx
frontend/src/components/layout/: CommandPanel.tsx  Header.tsx  MobileNavDrawer.tsx  PageLayout.tsx  Sidebar.tsx
frontend/src/hooks/: useKeyboardShortcuts.test.tsx  useKeyboardShortcuts.ts  useMediaQuery.ts  useWebSocket.ts
frontend/src/i18n/: index.ts  languages.ts
frontend/src/i18n/locales/de/: translation.json
frontend/src/i18n/locales/en/: translation.json
frontend/src/i18n/locales/es/: translation.json
frontend/src/i18n/locales/fr/: translation.json
frontend/src/i18n/locales/it/: translation.json
frontend/src/i18n/locales/ja/: translation.json
frontend/src/i18n/locales/ko/: translation.json
frontend/src/i18n/locales/nl/: translation.json
frontend/src/i18n/locales/pl/: translation.json
frontend/src/i18n/locales/pt/: translation.json
frontend/src/i18n/locales/ru/: translation.json
frontend/src/i18n/locales/zh-Hans/: translation.json
frontend/src/lib/: bootstrap.ts  currency.ts  vendors.ts
frontend/src/modules/: registry.tsx
frontend/src/modules/fanpilot/widgets/: FanPilotStatusWidget.tsx
frontend/src/modules/power/: exportCsv.ts  powerShared.tsx
frontend/src/modules/power/widgets/: EnergyCostWidget.tsx  PowerControlsWidget.tsx  PowerStatsWidget.tsx  PowerStatusWidget.tsx  PsuRedundancyWidget.tsx
frontend/src/modules/sensors/: SensorFilterMenu.tsx  sensorUtils.ts
frontend/src/modules/sensors/widgets/: MetricWidget.tsx  SensorChart.tsx  VoltagesWidget.tsx
frontend/src/pages/: Dashboard.tsx  FRUPage.tsx  FanPilotPage.tsx  LoginPage.tsx  ModulesPage.tsx  SELPage.tsx  SettingsPage.tsx  SetupPage.tsx
frontend/src/pages/settings/: AboutSection.tsx  AppearanceSection.tsx  EnergySection.tsx  NotificationsSection.tsx  SectionRail.tsx  SecuritySection.tsx  ServersSection.tsx  SettingsContext.ts  SystemSection.tsx  primitives.tsx  types.ts
frontend/src/stores/: alerting-store.ts  auth-store.ts  command-store.ts  connection-store.ts  currency-store.ts  edit-mode-store.ts  energy-reset-store.ts  fanpilot-store.ts  language-store.test.ts  language-store.ts  layout-store.ts  module-store.ts  power-store.ts  range-store.ts  sensor-store.ts  server-store.ts  theme-store.ts  tour-store.ts  ui-overlay-store.ts
frontend/src/styles/: globals.css
scripts/: check-i18n-parity.mjs  check-spa-built.mjs  check-wheel.py  lint-workflows.ps1  rebuild-spa.ps1  smoke-docker.ps1
tests/: conftest.py  test_sdr_parser.py
tests/fixtures/ipmi/: fru_print_dell.txt  sdr_elist_dell.txt  sel_elist_dell.txt
tests/integration/: test_api_routes.py  test_baseline_invariance.py  test_contract_surface.py
tests/unit/: test_auth.py  test_banner_emission.py  test_branding.py  test_cli_restart.py  test_cli_signals.py  test_console_import.py  test_console_ui.py  test_crypto.py  test_demo_seed.py  test_fanpilot_engine.py  test_fanpilot_failsafe.py  test_fanpilot_garbage.py  test_fanpilot_readback.py  test_fanpilot_startup_resume.py  test_ipmi_parsers.py  test_ipmi_service.py  test_logging.py  test_port_guard.py  test_sel_tasks.py  test_vendor_migration.py  test_websocket.py
