[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipmilink"
version = "2.0.0-alpha.1"
description = "Web-based IPMI management platform"
readme = "README.md"
license = {text = "ISC"}
requires-python = ">=3.11"
authors = [{name = "Luigi Tanzillo"}]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "pytest-cov>=7.0,<8",
]

[project.scripts]
ipmilink = "backend.main:cli"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Coverage is scoped to the four safety-critical modules (D-12). It is NOT a global gate.
# NOTE (REVIEWS HIGH #3): coverage.py's `[tool.coverage.run] source` expects PACKAGES/DIRECTORIES,
# not individual file paths — file paths there silently mis-scope the fail_under denominator.
# Use `include` (file globs) instead so the report lists exactly these four files and fail_under=80
# is computed only over them. `--cov` is passed per-run (the gate command / pre-commit hook),
# never baked into addopts, so a plain `pytest` does not force coverage.
[tool.coverage.run]
branch = true
include = [
    "backend/core/crypto.py",
    "backend/core/auth.py",
    "backend/modules/fanpilot/engine.py",
    "backend/core/ipmi_service.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
include = [
    "backend/core/crypto.py",
    "backend/core/auth.py",
    "backend/modules/fanpilot/engine.py",
    "backend/core/ipmi_service.py",
]
omit = []
